--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,10 +3,28 @@ backend:
   branch: develop
   repo: healthsites/senegal-emergency-health-data-campaign
 
+publish_mode: editorial_workflow
+
 media_folder: static/assets
 public_folder: /assets
 
 collections:
+  - name: 'pages'
+    label: 'Pages'
+    folder: 'content/pages'
+    create: true
+    slug: 'index'
+    media_folder: ''
+    public_folder: ''
+    path: '{{title}}/index'
+    editor:
+      preview: false
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string' }
+      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+      - { label: 'Description', name: 'description', widget: 'string' }
+      - { label: 'Body', name: 'body', widget: 'markdown' }
+
   - name: 'blog'
     label: 'Blog'
     folder: 'content/blog'
@@ -22,3 +40,5 @@ collections:
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+
+
